--- a/css/style.css
+++ b/css/style.css
@@ -85,27 +85,30 @@ a:hover {
 
 /*headerブロック（ロゴが入った最上段のブロック）
 ---------------------------------------------------------------------------*/
-/*トップページの画像ロゴ(png画像)設定*/
-.home header #logo {
-	position: absolute;left: 50%;top: 50%;transform: translate(-50%, -50%);
-	width: 300px;				/*ロゴ画像の幅*/
-	animation-name: opa1;		/*@keyframesの指定*/
-	animation-duration: 3S;		/*アニメーションの実行時間*/
-	animation-fill-mode: both;	/*アニメーションの待機中は最初のキーフレームを維持、終了後は最後のキーフレームを維持。*/
+/*トップページのロゴ*/
+.flowing {
+	width: 0;
+	margin: 0;
+	font-size: 3vw;
+	font-weight: bold;
+	color: #ff6347;
+	white-space: nowrap;
+	overflow: hidden;
+	animation: flowing-anim 3s forwards linear;
 }
-
-/*トップページの画像ロゴ(png画像)を、デフォルトでは非表示にする*/
-.home header #logo {
-	display: none;
+.flowing:nth-child(2) {
+	animation-delay: 2.5s;
 }
-
-/*ロゴアニメーションを使わない場合の設定*/
-.home.index2 header #logo {display: block;}
-.home.index2 svg {display: none;}
-
-/*トップページ以外のロゴ画像の幅*/
-header #logo {
-	width: 150px;
+.flowing:nth-child(3) {
+	animation-delay: 5s;
+}
+@keyframes flowing-anim {
+ 0%{
+     width: 0%;
+   }
+100%{
+     width: 100%;
+   }
 }
 
 /*mainブロック
