--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ a:hover {
 /*headerブロック（ロゴが入った最上段のブロック）
 ---------------------------------------------------------------------------*/
 /*トップページのロゴ*/
-.flowing {
+flowing {
 	width: 0;
 	margin: 0;
 	font-size: 3vw;
@@ -96,10 +96,10 @@ a:hover {
 	overflow: hidden;
 	animation: flowing-anim 3s forwards linear;
 }
-.flowing:nth-child(2) {
+flowing:nth-child(2) {
 	animation-delay: 2.5s;
 }
-.flowing:nth-child(3) {
+flowing:nth-child(3) {
 	animation-delay: 5s;
 }
 @keyframes flowing-anim {
