--- a/css/style.css
+++ b/css/style.css
@@ -86,20 +86,21 @@ a:hover {
 /*headerブロック（ロゴが入った最上段のブロック）
 ---------------------------------------------------------------------------*/
 /*トップページのロゴ*/
-flowing {
+.flowing {
 	width: 0;
 	margin: 0;
 	font-size: 3vw;
 	font-weight: bold;
-	color: #ff6347;
+	text-align:center
+	color: #fff;
 	white-space: nowrap;
 	overflow: hidden;
 	animation: flowing-anim 3s forwards linear;
 }
-flowing:nth-child(2) {
+.flowing:nth-child(2) {
 	animation-delay: 2.5s;
 }
-flowing:nth-child(3) {
+.flowing:nth-child(3) {
 	animation-delay: 5s;
 }
 @keyframes flowing-anim {
