--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ a:hover {
 	margin: 0;
 	font-size: 3vw;
 	font-weight: bold;
-	text-align:center
+	text-align:center;
 	color: #fff;
 	white-space: nowrap;
 	overflow: hidden;
