--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,10 @@ a:hover {
 /*headerブロック（ロゴが入った最上段のブロック）
 ---------------------------------------------------------------------------*/
 /*トップページのロゴ*/
+header{
+	text-align:center;
+}
+
 .flowing {
 	width: 0;
 	margin: 0;
