--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ a:hover {
 ---------------------------------------------------------------------------*/
 /*トップページのロゴ*/
 header{
+	height: 100vh;
 	text-align:center;
 }
 
