--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,8 @@ header{
 }
 
 .flowing {
-	width: 0;
-	margin: 0;
+	width: auto;
+	margin: auto;
 	font-size: 3vw;
 	font-weight: bold;
 	text-align:center;
