--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,13 @@ header{
         -webkit-transform : translate(-50%,-50%);
         transform : translate(-50%,-50%);
 }
+.flowing:nth-child(2) {
+	animation-delay: 2.5s;
+}
+
+.flowing:nth-child(3) {
+	animation-delay: 5s;
+}
 
 /*スクロールを促すアイコン*/
 .scroll {
