--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,6 @@ a:hover {
 header{
 	height: 100vh;
 	text-align:center;
-	position: relative;
 }
 
 .flowing {
@@ -92,18 +91,14 @@ header{
 	text-align:center;
 	color: #fff;
 	white-space: nowrap;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        -webkit-transform : translate(-50%,-50%);
-        transform : translate(-50%,-50%);
+	animation: flowing-anim 3s forwards linear;
 }
 .flowing:nth-child(2) {
-	animation-delay: 2.5s;
+	animation-delay: 0.5s;
 }
 
 .flowing:nth-child(3) {
-	animation-delay: 5s;
+	animation-delay: 1s;
 }
 
 /*スクロールを促すアイコン*/
