--- a/css/style.css
+++ b/css/style.css
@@ -85,20 +85,31 @@ header{
 
 .flowing {
 	width: 0;
-	margin: 0;
+	margin: 300px;
 	font-size: 3vw;
 	font-weight: bold;
 	text-align:center;
 	color: #fff;
-	white-space: nowrap;
+        white-space: nowrap;
+	overflow: hidden;
 	animation: flowing-anim 1s forwards linear;
 }
+
 .flowing:nth-child(2) {
 	animation-delay: 0.5s;
 }
 
 .flowing:nth-child(3) {
 	animation-delay: 1s;
+}
+
+@keyframes flowing-anim {
+ 0%{
+     width: 0%;
+   }
+100%{
+     width: 100%;
+   }
 }
 
 /*スクロールを促すアイコン*/
