--- a/css/style.css
+++ b/css/style.css
@@ -81,11 +81,10 @@ a:hover {
 header{
 	height: 100vh;
 	text-align:center;
+	position: relative; 
 }
 
 .flowing {
-	width: 0;
-	margin: 300px;
 	font-size: 3vw;
 	font-weight: bold;
 	text-align:center;
@@ -93,6 +92,15 @@ header{
         white-space: nowrap;
 	overflow: hidden;
 	animation: flowing-anim 1s forwards linear;
+	position: absolute;  /*要素を浮かす*/
+        /*relativeを指定した親要素を支点とした位置をすべて0に指定↓*/
+ 	 top: 0;
+ 	 right: 0;
+ 	 bottom: 0;
+ 	 left: 0;
+  	margin: auto; /*上下左右中央に*/
+  	width: 100px; /*widthの指定は必須*/
+ 	 height: 100px; /*heightの指定は必須*/
 }
 
 .flowing:nth-child(2) {
