--- a/css/style.css
+++ b/css/style.css
@@ -80,8 +80,6 @@ a:hover {
 /*トップページのロゴ*/
 header{
 	height: 100vh;
-	text-align:center;
-	position: relative; 
 }
 
 .flowing {
@@ -92,15 +90,7 @@ header{
         white-space: nowrap;
 	overflow: hidden;
 	animation: flowing-anim 1s forwards linear;
-	position: absolute;  /*要素を浮かす*/
-        /*relativeを指定した親要素を支点とした位置をすべて0に指定↓*/
- 	 top: 0;
- 	 right: 0;
- 	 bottom: 0;
- 	 left: 0;
-  	margin: auto; /*上下左右中央に*/
-  	width: 100px; /*widthの指定は必須*/
- 	 height: 100px; /*heightの指定は必須*/
+        padding-top: 200px;
 }
 
 .flowing:nth-child(2) {
