--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ header{
 }
 
 .flowing {
-	font-size: 3vw;
+	font-size: 80px;
 	font-weight: bold;
 	color: #fff;
         white-space: nowrap;
@@ -92,6 +92,9 @@ header{
         padding-top: 150px;
 	margin: 0;
 	animation-name: fade;
+}
+.flowing p {
+	font-size: 30px;
 }
 
 @keyframes fade{
