--- a/css/style.css
+++ b/css/style.css
@@ -462,7 +462,7 @@ ul.icon img:hover {
 
 
 ---------------------------------------------------------------------------*/
-/* photo.htmlの設定
+/* photo.htmlの設定 */
 .gallery {
 	padding: 0;
 	display: flex;
