--- a/css/style.css
+++ b/css/style.css
@@ -345,7 +345,8 @@ ul.icon img:hover {
 ---------------------------------------------------------------------------*/
 /* photo.htmlの設定 */
 .gallery {
-    padding: 0;
+    padding-left: 10px;
+    padding-right: auto;
     display: flex;
     margin: 60px 0;
 }
