--- a/css/style.css
+++ b/css/style.css
@@ -359,8 +359,7 @@ ul.icon img:hover {
 .gallery {
     display: flex;
     margin: 60px 0;
-    padding-left: 5px;
-    padding-right: auto;
+    padding: 5px;
 }
 .gallery .gallery-item {
     border: 3px solid #d3d3d3;
