--- a/css/style.css
+++ b/css/style.css
@@ -358,6 +358,7 @@ ul.icon img:hover {
 
 .gallery {
     margin: 5px 0;
+    text-align: center;
 }
 .gallery .gallery-item {
     border: 3px solid #d3d3d3;
