--- a/css/style.css
+++ b/css/style.css
@@ -358,7 +358,7 @@ ul.icon img:hover {
 
 .gallery {
     margin: 5px 0;
-    padding: 5px
+    padding: 5px;
     text-align: center;
 }
 .gallery .gallery-item {
