--- a/css/style.css
+++ b/css/style.css
@@ -337,6 +337,35 @@ ul.icon img:hover {
 
 ---------------------------------------------------------------------------*/
 /* photo.htmlの設定 */
+*ブロック内のh2タグ*/
+flowing h1 {
+	opacity: 0;							/*透明度。0は色が出ていない(0%)状態の事。*/
+	text-align: center;					/*文字をセンタリング*/
+	font-family: 'Tangerine', cursive, "ヒラギノ丸ゴ Pro", "Hiragino Maru Gothic Pro", "メイリオ", Meiryo, Osaka;
+	font-weight: normal;				/*hタグはデフォルトで太字なので、これを標準にする*/
+	font-size: 4rem;					/*文字サイズ。remの単位についてはテンプレート内の解説をお読み下さい。*/
+	margin-bottom: 80px;				/*下に空けるスペース*/
+}
+
+/*ブロック内のh2タグ内のspanタグ（日本語の小さい説明用部分）*/
+flowing h1 span {
+	display: block;	
+	font-size: 0.8rem;			/*文字サイズ。remの単位についてはテンプレート内の解説をお読み下さい。*/
+	letter-spacing: 0.2em;		/*文字間隔を少し広くとる指定*/
+}
+
+/*spanタグの前に「〜」を出力する指定*/
+flowing h1 span::before {
+	content: "〜";
+	padding-right: 10px;
+}
+
+/*spanタグの後に「〜」を出力する指定*/
+flowing h1 span::after {
+	content: "〜";
+	padding-left: 10px;
+}
+
 .gallery {
     margin: 5px 0;
     padding: 5px;
