--- a/css/style.css
+++ b/css/style.css
@@ -338,7 +338,7 @@ ul.icon img:hover {
 ---------------------------------------------------------------------------*/
 /* photo.htmlの設定 */
 *ブロック内のh2タグ*/
-flowing h1 {
+.photo h1 {
 	opacity: 0;							/*透明度。0は色が出ていない(0%)状態の事。*/
 	text-align: center;					/*文字をセンタリング*/
 	font-family: 'Tangerine', cursive, "ヒラギノ丸ゴ Pro", "Hiragino Maru Gothic Pro", "メイリオ", Meiryo, Osaka;
@@ -348,20 +348,20 @@ flowing h1 {
 }
 
 /*ブロック内のh2タグ内のspanタグ（日本語の小さい説明用部分）*/
-flowing h1 span {
+.photo h1 span {
 	display: block;	
 	font-size: 0.8rem;			/*文字サイズ。remの単位についてはテンプレート内の解説をお読み下さい。*/
 	letter-spacing: 0.2em;		/*文字間隔を少し広くとる指定*/
 }
 
 /*spanタグの前に「〜」を出力する指定*/
-flowing h1 span::before {
+.photo h1 span::before {
 	content: "〜";
 	padding-right: 10px;
 }
 
 /*spanタグの後に「〜」を出力する指定*/
-flowing h1 span::after {
+.photo h1 span::after {
 	content: "〜";
 	padding-left: 10px;
 }
