--- a/css/style.css
+++ b/css/style.css
@@ -337,7 +337,10 @@ ul.icon img:hover {
 
 ---------------------------------------------------------------------------*/
 /* photo.htmlの設定 */
-*ブロック内のh2タグ*/
+header.photo{
+	height:auto;
+}
+*ブロック内のh1タグ*/
 .photo h1 {
 	opacity: 0;							/*透明度。0は色が出ていない(0%)状態の事。*/
 	text-align: center;					/*文字をセンタリング*/
