--- a/css/style.css
+++ b/css/style.css
@@ -333,7 +333,6 @@ ul.icon img:hover {
 /* photo.htmlの設定 */
 .photo {
 	height:auto;
-	text-align:center;
 }
 *ブロック内のh1タグ*/
 .photo h1 {
@@ -342,7 +341,9 @@ ul.icon img:hover {
 	font-family: 'Tangerine', cursive, "ヒラギノ丸ゴ Pro", "Hiragino Maru Gothic Pro", "メイリオ", Meiryo, Osaka;
 	font-weight: normal;				/*hタグはデフォルトで太字なので、これを標準にする*/
 	font-size: 4rem;					/*文字サイズ。remの単位についてはテンプレート内の解説をお読み下さい。*/
-	margin-bottom: 80px;				/*下に空けるスペース*/
+	margin-bottom: 80px;
+	text-align: center;
+	/*下に空けるスペース*/
 }
 
 /*ブロック内のh2タグ内のspanタグ（日本語の小さい説明用部分）*/
