--- a/css/style.css
+++ b/css/style.css
@@ -324,7 +324,7 @@ ul.icon img:hover {
 
 ---------------------------------------------------------------------------*/
 /* photo.htmlの設定 */
-.photo {
+div.photo {
 	height:auto;
 	text-align: center;
 }
@@ -337,7 +337,6 @@ ul.icon img:hover {
 	font-size: 4rem;					/*文字サイズ。remの単位についてはテンプレート内の解説をお読み下さい。*/
 	margin-bottom: 80px;
 	text-align: center;
-	/*下に空けるスペース*/
 }
 
 /*ブロック内のh2タグ内のspanタグ（日本語の小さい説明用部分）*/
