--- a/css/style.css
+++ b/css/style.css
@@ -322,7 +322,7 @@ ul.icon img:hover {
 .look {display: inline-block;border: 1px solid #ccc;padding: 5px 20px;background: rgba(0,0,0,0.03);border-radius: 5px;margin: 5px 0;}
 .ofx {overflow-x: hidden;}
 
----------------------------------------------------------------------------*/
+/*---------------------------------------------------------------------------*/
 /* photo.htmlの設定 */
 div.photo {
 	height:auto;
