--- a/css/style.css
+++ b/css/style.css
@@ -402,7 +402,7 @@ section + section {
 #container {
 	padding: 0 50px;	/*上下、左右へのブロック内の余白*/
 }	
----------------------------------------------------------------------------*/
+/*---------------------------------------------------------------------------*/
 /*トップページのロゴ*/
 .flowing h1 {
 	font-size: 4em;;
