--- a/css/style.css
+++ b/css/style.css
@@ -358,9 +358,10 @@ div.photo {
 }
 
 .gallery {
-    margin: 5px 0;
-    padding: 5px;
+    margin: 5px 0px 30px;
+    padding-left: 0;
     text-align: center;
+	
 }
 .gallery .gallery-item {
     border: 3px solid #d3d3d3;
