--- a/css/style.css
+++ b/css/style.css
@@ -384,7 +384,6 @@ div.photo {
 ---------------------------------------------------------------------------*/
 @media screen and (min-width:800px) {
 
-
 /*全体の設定
 ---------------------------------------------------------------------------*/
 html, body {
@@ -404,7 +403,7 @@ section + section {
 /*---------------------------------------------------------------------------*/
 /*トップページのロゴ*/
 .flowing h1 {
-	font-size: 4em;;
+	font-size: 4em;
         padding-top: 150px;
 }
 .flowing p {
