--- a/css/style.css
+++ b/css/style.css
@@ -328,12 +328,13 @@ div.photo {
 	height:auto;
 }
 /*ブロック内のh1タグ*/
-.photo h1 {
-	opacity: 0;									
+.photo h1 {								
 	font-family: 'Tangerine', cursive, "ヒラギノ丸ゴ Pro", "Hiragino Maru Gothic Pro", "メイリオ", Meiryo, Osaka;
 	font-weight: normal;				
 	font-size: 4rem;	
 	text-align: center;
+	animation-name: fade;
+	animation-duration:5s;
 }
 
 /*ブロック内のh2タグ内のspanタグ（日本語の小さい説明用部分）*/
