--- a/css/style.css
+++ b/css/style.css
@@ -379,6 +379,42 @@ div.photo {
     box-shadow: 0 5px 20px 0px rgb(0 0 0 / 30%);
 }
 
+
+/*---------------------------------------------------------------------------*/
+/* movie.htmlの設定 */
+/*list（商品メニュー用のブロック）
+---------------------------------------------------------------------------*/
+/*ボックスの設定*/
+#contents .list {
+	position: relative;overflow: hidden;
+	display: flex;
+	align-items: center;
+	margin: 0 10px 30px;	/*上、左右、下へのボックスの外側に空けるスペース*/
+	color: #faf6f3;			/*文字色*/
+	border: 1px solid #555;
+}
+/*ボックス内のh4（見出し）タグ*/
+#contents .list h4 {
+	font-size: 24px;
+	line-height: 1.5;
+	margin-bottom: 20px;
+}
+/*ボックス内のp（段落）タグ*/
+#contents .list p {
+	padding: 0;
+}
+/*ボックス内のfigure画像*/
+#contents .list figure {
+	float: left;	/*左に回り込み*/
+	width: 50%;		/*幅*/
+}
+/*「class="text"」を指定したブロック。テキストブロック。*/
+#contents .list .text {
+	float: right;	/*右に回り込み*/
+	width: 40%;		/*幅*/
+	margin: 5%;		/*外側に取るスペース。これがないと枠ギチギチに文字が表示されます。*/
+}
+
 /*---------------------------------------------------------------------------
 ここから下は画面幅800px以上の追加指定
 ---------------------------------------------------------------------------*/
