--- a/css/style.css
+++ b/css/style.css
@@ -415,6 +415,22 @@ div.photo {
 	margin: 5%;		/*外側に取るスペース。これがないと枠ギチギチに文字が表示されます。*/
 }
 
+/*leftスタイル。左からフェードインしてくるスタイル（待機中）*/
+.left {
+	left: -100px;	/*基準値より左に100pxの場所からスタート*/
+}
+/*要素が見えたら実行するアクション*/
+.leftstyle {
+	left: 0px;		/*基準値まで戻す*/
+}
+/*rightスタイル。右からフェードインしてくるスタイル（待機中）*/
+.right {
+	right: -100px;	/*基準値より右に100pxの場所からスタート*/
+}
+/*要素が見えたら実行するアクション*/
+.rightstyle {
+	right: 0px;		/*基準値まで戻す*/
+
 /*---------------------------------------------------------------------------
 ここから下は画面幅800px以上の追加指定
 ---------------------------------------------------------------------------*/
