--- a/css/style.css
+++ b/css/style.css
@@ -430,6 +430,7 @@ div.photo {
 /*要素が見えたら実行するアクション*/
 .rightstyle {
 	right: 0px;		/*基準値まで戻す*/
+}
 
 /*---------------------------------------------------------------------------
 ここから下は画面幅800px以上の追加指定
