--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,15 @@
 @charset "utf-8";
 
-/*リセットCSS（sanitize.css）の読み込み
----------------------------------------------------------------------------*/
+/*リセットCSS（sanitize.css）の読み込み---------------------------------------------------------------------------*/
 @import url("https://unpkg.com/sanitize.css");
-/*Google Fontsの読み込み
----------------------------------------------------------------------------*/
+/*Google Fontsの読み込み---------------------------------------------------------------------------*/
 @import url('https://fonts.googleapis.com/css2?family=Tangerine&display=swap');
-/*slick.cssの読み込み
----------------------------------------------------------------------------*/
+/*slick.cssの読み込み---------------------------------------------------------------------------*/
 @import url("https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css");
-/*inview.cssの読み込み
----------------------------------------------------------------------------*/
+/*inview.cssの読み込み---------------------------------------------------------------------------*/
 @import url("inview.css");
 
-/*全体の設定
----------------------------------------------------------------------------*/
+/*全体の設定---------------------------------------------------------------------------*/
 html,body {
 	overflow-x: hidden;
 	font-size: 14px;	/*基準となるフォントサイズ。下の方にある「画面幅800px以上」で基準を大きなサイズに変更しています。*/
@@ -43,8 +38,7 @@ section + section {
 	padding-top: 30px;	/*sectionの間に空けるスペース*/
 }
 
-/*リンクテキスト全般の設定
----------------------------------------------------------------------------*/
+/*リンクテキスト全般の設定---------------------------------------------------------------------------*/
 a {
 	color: #fff;	/*文字色*/
 }
@@ -52,16 +46,14 @@ a:hover {
 	color: #999;	/*マウスオン時の文字色*/
 }
 
-/*container。サイト全体を囲むブロック。
----------------------------------------------------------------------------*/
+/*container。サイト全体を囲むブロック。---------------------------------------------------------------------------*/
 #container {
 	margin: 0 auto;
 	max-width: 1400px;	/*最大幅。これ以上幅が広がらないように。*/
 	padding: 0 10px;	/*上下、左右へのブロック内の余白*/
 }
 
-/*headerブロック（ロゴが入った最上段のブロック）
----------------------------------------------------------------------------*/
+/*headerブロック（ロゴが入った最上段のブロック）---------------------------------------------------------------------------*/
 /*トップページのロゴ*/
 header{
 	height: 100vh;
@@ -98,8 +90,7 @@ header{
 	opacity: 0.7;	/*透明度。0.7は色が70%出た状態の事。*/
 }
 
-/*mainブロック
----------------------------------------------------------------------------*/
+/*mainブロック---------------------------------------------------------------------------*/
 main {
 	margin-bottom: 100px;	/*下に空けるスペース*/
 }
@@ -133,8 +124,7 @@ main h2 span::after {
 	padding-left: 10px;
 }
 
-/*３本バー（ハンバーガー）アイコン設定
----------------------------------------------------------------------------*/
+/*３本バー（ハンバーガー）アイコン設定---------------------------------------------------------------------------*/
 /*３本バーブロック*/
 #menubar_hdr {
 	display: block;
@@ -152,8 +142,7 @@ main h2 span::after {
 	background: #ff0000 url(../images/icon_menu.png) no-repeat center bottom/50px;	/*背景色、背景画像の読み込み、画像の下半分（×マーク）を表示。幅は50px。*/
 }
 
-/*メニューの設定
----------------------------------------------------------------------------*/
+/*メニューの設定---------------------------------------------------------------------------*/
 #menubar ul {list-style: none;}
 
 /*ボックス全体の設定*/
@@ -193,8 +182,7 @@ main h2 span::after {
 	font-size: 0.7rem;	/*文字サイズ。remの単位についてはテンプレート内の解説をお読み下さい。*/
 }
 
-/*フッター設定
----------------------------------------------------------------------------*/
+/*フッター設定---------------------------------------------------------------------------*/
 footer small {font-size: 100%;}
 
 footer {
@@ -209,8 +197,7 @@ footer a {text-decoration: none;}
 /*著作部分*/
 footer .pr {display: block;}
 
-/*フッターにあるアイコン類
----------------------------------------------------------------------------*/
+/*フッターにあるアイコン類---------------------------------------------------------------------------*/
 /*アイコン類を囲むブロック*/
 ul.icon {
 	list-style: none;
@@ -233,8 +220,7 @@ ul.icon img:hover {
 	opacity: 0.8;	/*透明度。0.8は色が80%出た状態の事。*/
 }
 
-/*トップページの「今週のランチ」ブロック
----------------------------------------------------------------------------*/
+/*トップページの「今週のランチ」ブロック---------------------------------------------------------------------------*/
 /*写真とメニュー解説テキストを囲むブロック*/
 .list2 {
 	display: flex;			/*flexボックスを使う指定*/
@@ -287,8 +273,7 @@ ul.icon img:hover {
 	opacity: 0.5;		/*透明度。0.5は色が50%出た状態の事。*/
 }
 
-/*PAGE TOP（↑）設定
----------------------------------------------------------------------------*/
+/*PAGE TOP（↑）設定---------------------------------------------------------------------------*/
 .pagetop-show {display: block;}
 
 .pagetop a {
@@ -308,8 +293,7 @@ ul.icon img:hover {
 	background: rgba(0,0,0,0.8);	/*背景色。0,0,0は黒色の指定で0.8は色が80%出た状態。*/
 }
 
-/*その他
----------------------------------------------------------------------------*/
+/*その他---------------------------------------------------------------------------*/
 .clearfix::after {content: "";display: block;clear: both;}
 .color-theme, .color-theme a {color: #f1c734 !important;}
 .color-check, .color-check a {color: #f00 !important;}
@@ -379,12 +363,8 @@ div.photo {
     box-shadow: 0 5px 20px 0px rgb(0 0 0 / 30%);
 }
 
-
-/*---------------------------------------------------------------------------*/
-/* movie.htmlの設定 */
-/*list（商品メニュー用のブロック）
----------------------------------------------------------------------------*/
-/*ボックスの設定*/
+/* movie.htmlの設定 ---------------------------------------------------------------------------*/
+/*listボックスの設定*/
 #contents .list {
 	position: relative;overflow: hidden;
 	display: flex;
@@ -432,13 +412,10 @@ div.photo {
 	right: 0px;		/*基準値まで戻す*/
 }
 
-/*---------------------------------------------------------------------------
-ここから下は画面幅800px以上の追加指定
----------------------------------------------------------------------------*/
+/*ここから下は画面幅800px以上の追加指定---------------------------------------------------------------------------*/
 @media screen and (min-width:800px) {
 
-/*全体の設定
----------------------------------------------------------------------------*/
+/*全体の設定---------------------------------------------------------------------------*/
 html, body {
 	font-size: 18px;	/*基準となるフォントサイズの上書き*/
 }
@@ -448,8 +425,7 @@ section + section {
 	padding-top: 50px;	/*sectionの間に空けるスペース*/
 }
 
-/*container。サイト全体を囲むブロック。
----------------------------------------------------------------------------*/
+/*container。サイト全体を囲むブロック。---------------------------------------------------------------------------*/
 #container {
 	padding: 0 50px;	/*上下、左右へのブロック内の余白*/
 }	
@@ -463,8 +439,7 @@ section + section {
 	font-size: 1.5em;;
 }
 
-/*トップページの「今週のランチ」ブロック
----------------------------------------------------------------------------*/
+/*トップページの「今週のランチ」ブロック---------------------------------------------------------------------------*/
 /*写真とメニュー解説テキストを囲むブロック*/
 .list2 {
 	flex-direction: row;	/*子要素を横並びにする*/
@@ -486,8 +461,7 @@ section + section {
 	width: 48%;	/*幅*/
 }
 
-/*その他
----------------------------------------------------------------------------*/
+/*その他---------------------------------------------------------------------------*/
 .ws {width: 45%;display: inline-block;}
 
 /*　※注意！　下の閉じカッコ　}　は800px以上の設定に必要なので、うっかり削除しないように。　*/
