--- a/css/style.css
+++ b/css/style.css
@@ -451,6 +451,22 @@ section + section {
 .list2 .text {
 	width: 48%;	/*幅*/
 }
+	
+/*movie.htmlボックス設定---------------------------------------------------------------------------*/
+.list3 {
+	flex-direction: row;	/*子要素を横並びにする*/
+	margin-bottom: 100px;	/*下に空けるスペース*/
+}
+
+/*list3ブロック内のfigureタグ。写真を囲むブロック。*/
+.list3 figure {
+	width: 48%;	/*幅*/
+}
+
+/*list3内のtextブロック*/
+.list3 .text {
+	width: 48%;	/*幅*/
+}
 
 /*その他---------------------------------------------------------------------------*/
 .ws {width: 45%;display: inline-block;}
