--- a/css/inview.css
+++ b/css/inview.css
@@ -2,10 +2,10 @@
 
 
 
-/*up,down,left,right,transform1,transform2の共通設定
+/*up,left,rightの共通設定
 （待機中の設定）
 ---------------------------------------------------------------------------*/
-.up, .down, .left, .right, .transform1, .transform2 {
+.up, .left, .right {
 	opacity: 0;		/*透明度（透明の状態）*/
 	position: relative;
 }
@@ -14,14 +14,13 @@
 /*up,down,left,right,transform1,transform2の共通設定
 （要素が見えたら実行するアクションの設定）
 ---------------------------------------------------------------------------*/
-.upstyle, .downstyle, .leftstyle, .rightstyle, .transform1style, .transform2style {
+.upstyle, .leftstyle, .rightstyle {
 	opacity: 1;				/*透明度（色が100%出た状態）*/
 	transition: 1s 0.5s;	/*1sはアニメーションの実行時間1.5秒。0.5sは0.5秒遅れてスタートする指定。*/
 }
 
 
-/*upスタイル。下から上にフェードインしてくるスタイル
----------------------------------------------------------------------------*/
+/*upスタイル。下から上にフェードインしてくるスタイル---------------------------------------------------------------------------*/
 /*待機中の設定*/
 .up {
 	bottom: -20px;	/*基準値の下20pxの場所からスタート*/
@@ -32,20 +31,7 @@
 	bottom: 0px;	/*基準値まで戻す*/
 }
 
-/*downスタイル。上から下にフェードインしてくるスタイル
----------------------------------------------------------------------------*/
-/*待機中の設定*/
-.down {
-	top: -20px;	/*基準値の上20pxの場所からスタート*/
-}
-
-/*要素が見えたら実行するアクション*/
-.downstyle {
-	top: 0px;	/*基準値まで戻す*/
-}
-
-/*leftスタイル。左からフェードインしてくるスタイル
----------------------------------------------------------------------------*/
+/*leftスタイル。左からフェードインしてくるスタイル---------------------------------------------------------------------------*/
 /*待機中の設定*/
 .left {
 	left: -100px;	/*基準値より左に100pxの場所からスタート*/
@@ -56,8 +42,7 @@
 	left: 0px;		/*基準値まで戻す*/
 }
 
-/*rightスタイル。右からフェードインしてくるスタイル
----------------------------------------------------------------------------*/
+/*rightスタイル。右からフェードインしてくるスタイル---------------------------------------------------------------------------*/
 /*待機中の設定*/
 .right {
 	right: -100px;	/*基準値より右に100pxの場所からスタート*/
@@ -68,33 +53,8 @@
 	right: 0px;		/*基準値まで戻す*/
 }
 
-/*transform1スタイル。その場で回転するスタイル
----------------------------------------------------------------------------*/
-/*待機中の設定*/
-.transform1 {
-	transform: scaleX(0);	/*幅を0%でスタート*/
-}
 
-/*要素が見えたら実行するアクション*/
-.transform1style {
-	transform: scaleX(1);	/*幅を100%に戻す*/
-}
-
-/*transform2スタイル。倒れた状態から起き上がるスタイル
----------------------------------------------------------------------------*/
-/*待機中の設定*/
-.transform2 {
-	transform: perspective(400px) rotateX(50deg);
-}
-
-/*要素が見えたら実行するアクション*/
-.transform2style {
-	transform: perspective(400px) rotateX(0deg);
-}
-
-
-/*blurスタイル。ぼかしで出現するスタイル。
----------------------------------------------------------------------------*/
+/*blurスタイル。ぼかしで出現するスタイル。---------------------------------------------------------------------------*/
 /*キーフレーム（アニメーション）設定*/
 @keyframes blur {
 0% {
