--- a/css/style.css
+++ b/css/style.css
@@ -350,6 +350,7 @@ div.photo {
     max-width: 100%;
     height: auto;
     box-shadow: 0 5px 20px 0px rgb(0 0 0 / 30%);
+}
 
 /*ふわっと表示*/
 .fadeUp {
